Added image lazy load throught javascript & google analytics. Deleted unused css files.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <meta name="description" content="J.P. Aulet Personal webpage">
     <meta name="keywords" content="J.P Aulet, CV, Fullstack, PHP, Javascript, HTML, CSS">
     <meta name="author" content="J.P. Aulet">
-    <link rel="stylesheet" ref="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="production/css/style.css">
-    <link rel="stylesheet" href="development/scss/lightbox.min.css">
-    <link rel="stylesheet" href="development/scss/emoji.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
   </head>
   <body>
     <div class="container-fluid">
@@ -56,12 +51,7 @@
               <a class="social" href="https://www.linkedin.com/in/jpaulet/" target="_blank">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
-            </li>
-            <li class="li-social-links">
-              <a class="social" href="https://www.facebook.com/jordi.aulet" target="_blank">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-            </li>            
+            </li>          
           </ul>
         </div>        
       </div>
@@ -167,16 +157,16 @@
               </div>
               <div class="project-image">
                 <a href="img/civiciti/civiciti1.jpg" data-lightbox="civiciti">
-                  <img src="img/civiciti/civiciti1.jpg" alt="Civiciti platform" />
+                  <img src="img/fileloading.png" data-src="img/civiciti/civiciti1.jpg" alt="Civiciti platform" />
                 </a>
                 <a href="img/civiciti/civiciti2.jpg" data-lightbox="civiciti">
-                  <img src="img/civiciti/civiciti2.jpg" alt="Civiciti platform" />
+                  <img src="img/fileloading.png" data-src="img/civiciti/civiciti2.jpg" alt="Civiciti platform" />
                 </a>
                 <a href="img/civiciti/civiciti3.jpg" data-lightbox="civiciti">
-                  <img src="img/civiciti/civiciti3.jpg" alt="Civiciti platform" />
+                  <img src="img/fileloading.png" data-src="img/civiciti/civiciti3.jpg" alt="Civiciti platform" />
                 </a>
                 <a href="img/civiciti/civiciti4.jpg" data-lightbox="civiciti">
-                  <img src="img/civiciti/civiciti4.jpg" alt="Civiciti platform" />
+                  <img src="img/fileloading.png" data-src="img/civiciti/civiciti4.jpg" alt="Civiciti platform" />
                 </a>
               </div>
             </div>
@@ -201,19 +191,19 @@
               </div>
               <div class="project-image">
                 <a href="img/indiko/indiko.jpg" data-lightbox="indiko">
-                  <img src="img/indiko/indiko.jpg" class='img__v100' alt="Indiko platform" />
+                  <img src="img/fileloading.png" data-src="img/indiko/indiko.jpg" class='img__v100' alt="Indiko platform" />
                 </a>
                 <a href="img/indiko/indiko2.jpg" data-lightbox="indiko">
-                  <img src="img/indiko/indiko2.jpg" class='img__v100' alt="Indiko platform" />
+                  <img src="img/fileloading.png" data-src="img/indiko/indiko2.jpg" class='img__v100' alt="Indiko platform" />
                 </a>
                 <a href="img/indiko/indiko3.jpg" data-lightbox="indiko">
-                  <img src="img/indiko/indiko3.jpg" class='img__v100' alt="Indiko platform" />
+                  <img src="img/fileloading.png" data-src="img/indiko/indiko3.jpg" class='img__v100' alt="Indiko platform" />
                 </a>
                 <a href="img/indiko/indiko4.jpg" data-lightbox="indiko">
-                  <img src="img/indiko/indiko4.jpg" class='img__v100' alt="Indiko platform" />
+                  <img src="img/fileloading.png" data-src="img/indiko/indiko4.jpg" class='img__v100' alt="Indiko platform" />
                 </a>
                 <a href="img/indiko/indiko5.jpg" data-lightbox="indiko">
-                  <img src="img/indiko/indiko5.jpg" class='img__v100' alt="Indiko platform" />
+                  <img src="img/fileloading.png" data-src="img/indiko/indiko5.jpg" class='img__v100' alt="Indiko platform" />
                 </a>                
               </div>
             </div>
@@ -236,19 +226,19 @@
               </div>
               <div class="project-image">
                 <a href="img/brandrain/brandrain1.jpg" data-lightbox="brandrain">
-                  <img src="img/brandrain/brandrain1.jpg" alt="Brandrain Platform" />
+                  <img src="img/fileloading.png" data-src="img/brandrain/brandrain1.jpg" alt="Brandrain Platform" />
                 </a>
                 <a href="img/brandrain/brandrain2.jpg" data-lightbox="brandrain">
-                  <img src="img/brandrain/brandrain2.jpg" alt="Brandrain Platform" />
+                  <img src="img/fileloading.png" data-src="img/brandrain/brandrain2.jpg" alt="Brandrain Platform" />
                 </a>
                 <a href="img/brandrain/brandrain3.jpg" data-lightbox="brandrain">
-                  <img src="img/brandrain/brandrain3.jpg" alt="Brandrain Platform" />
+                  <img src="img/fileloading.png" data-src="img/brandrain/brandrain3.jpg" alt="Brandrain Platform" />
                 </a>
                 <a href="img/brandrain/brandrain4.jpg" data-lightbox="brandrain">
-                  <img src="img/brandrain/brandrain4.jpg" alt="Brandrain Platform" />
+                  <img src="img/fileloading.png" data-src="img/brandrain/brandrain4.jpg" alt="Brandrain Platform" />
                 </a>
                 <a href="img/brandrain/brandrain5.jpg" data-lightbox="brandrain">                
-                  <img src="img/brandrain/brandrain5.jpg" alt="Brandrain Platform" />
+                  <img src="img/fileloading.png" data-src="img/brandrain/brandrain5.jpg" alt="Brandrain Platform" />
                 </a>
               </div>
             </div>
@@ -296,19 +286,19 @@
               </div>
               <div class="project-image">
                 <a href="img/magicmirror/magicmirror1.jpg" data-lightbox="magicmirror">                
-                  <img src="img/magicmirror/magicmirror1.jpg" class='img__v100' alt="MagicMirror photos" />
+                  <img src="img/fileloading.png" data-src="img/magicmirror/magicmirror1.jpg" class='img__v100' alt="MagicMirror photos" />
                 </a>
                 <a href="img/magicmirror/magicmirror2.jpg" data-lightbox="magicmirror">                
-                  <img src="img/magicmirror/magicmirror2.jpg" class='img__v100' alt="MagicMirror photos" />
+                  <img src="img/fileloading.png" data-src="img/magicmirror/magicmirror2.jpg" class='img__v100' alt="MagicMirror photos" />
                 </a>
                 <a href="img/magicmirror/magicmirror3.jpg" data-lightbox="magicmirror">                
-                  <img src="img/magicmirror/magicmirror3.jpg" class='img__v100' alt="MagicMirror photos" />
+                  <img src="img/fileloading.png" data-src="img/magicmirror/magicmirror3.jpg" class='img__v100' alt="MagicMirror photos" />
                 </a>
                 <a href="img/magicmirror/magicmirror4.jpg" data-lightbox="magicmirror">                
-                  <img src="img/magicmirror/magicmirror4.jpg" class='img__v100' alt="MagicMirror photos" />
+                  <img src="img/fileloading.png" data-src="img/magicmirror/magicmirror4.jpg" class='img__v100' alt="MagicMirror photos" />
                 </a>
                 <a href="img/magicmirror/magicmirror5.jpg" data-lightbox="magicmirror">                
-                  <img src="img/magicmirror/magicmirror5.jpg" class='img__v100' alt="MagicMirror photos" />
+                  <img src="img/fileloading.png" data-src="img/magicmirror/magicmirror5.jpg" class='img__v100' alt="MagicMirror photos" />
                 </a>
               </div>
             </div>
@@ -334,13 +324,13 @@
               </div>
               <div class="project-image">
                 <a href="img/trainingcloud/trainingcloud1.jpg" data-lightbox="trainingcloud">                
-                  <img src="img/trainingcloud/trainingcloud1.jpg" class='img__v100' alt="Trainingcloud platform" />
+                  <img src="img/fileloading.png" data-src="img/trainingcloud/trainingcloud1.jpg" class='img__v100' alt="Trainingcloud platform" />
                 </a>
                 <a href="img/trainingcloud/trainingcloud2.jpg" data-lightbox="trainingcloud">                
-                  <img src="img/trainingcloud/trainingcloud2.jpg" class='img__v100' alt="Trainingcloud platform" />
+                  <img src="img/fileloading.png" data-src="img/trainingcloud/trainingcloud2.jpg" class='img__v100' alt="Trainingcloud platform" />
                 </a>
                 <a href="img/trainingcloud/trainingcloud4.jpg" data-lightbox="trainingcloud">                
-                  <img src="img/trainingcloud/trainingcloud4.jpg" class='img__v100' alt="Trainingcloud platform" />
+                  <img src="img/fileloading.png" data-src="img/trainingcloud/trainingcloud4.jpg" class='img__v100' alt="Trainingcloud platform" />
                 </a>                
               </div>
             </div>
@@ -368,10 +358,10 @@
               </div>
               <div class="project-image" style='margin-top:20px;'>
                 <a href="img/octopisoftware/boardmix.jpg" data-lightbox="octopisoftware">                
-                  <img src="img/octopisoftware/boardmix.jpg" class='img__v100' alt="OctopiSoftware apps" />
+                  <img src="img/fileloading.png" data-src="img/octopisoftware/boardmix.jpg" class='img__v100' alt="OctopiSoftware apps" />
                 </a>
                 <a href="img/octopisoftware/boardmusic1.jpg" data-lightbox="octopisoftware">                
-                  <img src="img/octopisoftware/boardmusic1.jpg" class='img__v100' alt="OctopiSoftware apps" />
+                  <img src="img/fileloading.png" data-src="img/octopisoftware/boardmusic1.jpg" class='img__v100' alt="OctopiSoftware apps" />
                 </a>               
               </div>
             </div>
@@ -400,36 +390,36 @@
               </div>
               <div class="project-image">
                 <a href="img/websites/website14.jpg" data-lightbox="website">                
-                  <img src="img/websites/website14.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website14.jpg" class='img__v100' alt="Websites developed" />
                 </a> 
                 <a href="img/websites/website2.jpg" data-lightbox="website">                
-                  <img src="img/websites/website2.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website2.jpg" class='img__v100' alt="Websites developed" />
                 </a> 
                 <a href="img/websites/website3.jpg" data-lightbox="website">                
-                  <img src="img/websites/website3.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website3.jpg" class='img__v100' alt="Websites developed" />
                 </a> 
                 <a href="img/websites/website4.jpg" data-lightbox="website">                
-                  <img src="img/websites/website4.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website4.jpg" class='img__v100' alt="Websites developed" />
                 </a> 
                 <a href="img/websites/website5.jpg" data-lightbox="website">                
-                  <img src="img/websites/website5.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website5.jpg" class='img__v100' alt="Websites developed" />
                 </a>
               </div>
               <div class="project-image">
                 <a href="img/websites/website7.jpg" data-lightbox="website">                
-                  <img src="img/websites/website7.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website7.jpg" class='img__v100' alt="Websites developed" />
                 </a> 
                 <a href="img/websites/website9.jpg" data-lightbox="website">                
-                  <img src="img/websites/website9.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website9.jpg" class='img__v100' alt="Websites developed" />
                 </a> 
                 <a href="img/websites/website10.jpg" data-lightbox="website">                
-                  <img src="img/websites/website10.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website10.jpg" class='img__v100' alt="Websites developed" />
                 </a> 
                 <a href="img/websites/website11.jpg" data-lightbox="website">                
-                  <img src="img/websites/website11.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website11.jpg" class='img__v100' alt="Websites developed" />
                 </a>
                 <a href="img/websites/website13.jpg" data-lightbox="website">                
-                  <img src="img/websites/website13.jpg" class='img__v100' alt="Websites developed" />
+                  <img src="img/fileloading.png" data-src="img/websites/website13.jpg" class='img__v100' alt="Websites developed" />
                 </a> 
               </div>
             </div>            
@@ -460,10 +450,10 @@
               </div>
               <div class="project-image" style='margin-top:20px;'>
                 <a href="img/endavanthaiti/endavanthaiti1.jpg" data-lightbox="endavanthaiti">                
-                  <img src="img/endavanthaiti/endavanthaiti1.jpg" class='img__v100' alt="EndavantHaiti Website" />
+                  <img src="img/fileloading.png" data-src="img/endavanthaiti/endavanthaiti1.jpg" class='img__v100' alt="EndavantHaiti Website" />
                 </a>
                 <a href="img/endavanthaiti/endavanthaiti2.jpg" data-lightbox="endavanthaiti">                
-                  <img src="img/endavanthaiti/endavanthaiti2.jpg" class='img__v100' alt="EndavantHaiti Website" />
+                  <img src="img/fileloading.png" data-src="img/endavanthaiti/endavanthaiti2.jpg" class='img__v100' alt="EndavantHaiti Website" />
                 </a>
               </div>              
             </div>
@@ -476,7 +466,7 @@
               </div>
               <div class="project-image" style='margin-top:20px;'>
                 <a href="img/cineastasenaccion/cineastasenaccion.jpg" data-lightbox="cineastas">
-                  <img src="img/cineastasenaccion/cineastasenaccion.jpg" class='img__v100' style='width:120px;' alt="Cineastas en accion website" />
+                  <img src="img/fileloading.png" data-src="img/cineastasenaccion/cineastasenaccion.jpg" class='img__v100' style='width:120px;' alt="Cineastas en accion website" />
                 </a>
               </div>              
             </div>
@@ -558,7 +548,7 @@
         <div class="main-content">
           <div class="content-header">
             <a class="anchor" name="contact"></a>
-            <h2 class="white-text">Hire Me</h2>
+            <h2 class="white-text">Contact Me</h2>
           </div>
           <div class="contact content-body">
             <form id='hireMe'>
@@ -597,10 +587,21 @@
 
     </div>
 
-  <script src="development/js/lightbox-plus-jquery.min.js"></script>
-  <script src="development/js/jquery.vticker.min.js"></script>
+  <link rel="stylesheet" ref="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800">
+  <link rel="stylesheet" href="production/css/style.css">
+  <link rel="stylesheet" href="production/css/lightbox.min.css">  
+
+  <script src="production/js/lightbox-plus-jquery.min.js"></script>
+  <script src="production/js/jquery.vticker.min.js"></script>
   <script>
     $(document).ready(function(){
+
+      [].forEach.call(document.querySelectorAll('img[data-src]'),function(img) {
+        img.setAttribute('src', img.getAttribute('data-src'));
+        img.onload = function() {
+          img.removeAttribute('data-src');
+        };
+      });
 
       $('#whoIam').show().vTicker({ interval: 1500 });
 
@@ -628,7 +629,15 @@
 
     });
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117281531-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-117281531-1');
+  </script>
 
   </body>
 </html>
