--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <!-- HEADER -->
       <div class="jumbotron jumbotron-fluid">
         <div class="jumbotron-text">
-          <h1>Hello, I'm <span class='emphasis'>Jordi P. Aulet</span>.</h1>
+          <h1><span class='emphasis'>Jordi P. Aulet</span></h1>
           <p>
-            <span style='padding-left:20px;float:left;display:inline;padding-right:10px;'>I'm a </span>
-            <div id='whoIam' style='display:none;text-align:left;'>
+            <span style='float:center;display:inline;'></span>
+            <div id='whoIam' style='text-align: center;'>
               <ul>
                 <li>Fullstack Developer</li>
                 <li>Software Engineer</li>
